# mcm

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Descarga com Chapa Indicado.docx  Mapeamento_BID_MCM.pptx  Mapeamento_BID_MeuChapa.pptx  Mapeamento_Descarga_MeuChapa.pptx  Mapeamento_FUP_MeuChapa.pptx  Mapeamento_SEARA_MeuChapa.pptx  SEARA.docx  analise de clientes.txt  bun.lockb  dashboard de BID.txt  escopo_aplicacao_v2.html  ia.txt  index.html  latest.json  package-lock.json  package.json  tailwind.config.ts  tauri_update_key.pub  tragetta_briefing_v2.html  vite.config.ts
.agents/: AGENTS_MAP.md  CORE_RULES.md  JOURNAL.md  LESSONS.md  PROJECT_RULES.md  decisions.jsonl
.agents/sessions/: active_sessions.md
docs/: analise-clientes.md  atualizacoes_teams.txt  diretrizes_supabase_sync.md  estudo_nivel_apple.md  panorama_produto.md  planejamento_migracao_banco.md  plano_implementacao_apple.md
scripts/: firestore-diag.mjs  gerar_bid.cjs  gerar_descarga.cjs  gerar_mapeamento.cjs  gerar_mapeamento.js  gerar_seara.cjs  jira.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ActiveDispatchesOverlay.tsx  ActivityBell.tsx  AlertBanner.tsx  AppLayout.tsx  AppSidebar.tsx  AppStartup.tsx  ApproachingAlert.tsx  AsoBadge.tsx  AutoFupConfirmDialog.tsx  BidMatchmaker.tsx  BidRadar.tsx  CommandPalette.tsx  Confetti.tsx  DailyBriefing.tsx  ErrorBoundary.tsx  FillRateBar.tsx  IntroScreen.tsx  ObservationsPanel.tsx  RefreshDiff.tsx  (+11 more)
supabase/: config.toml
(+98 files in other folders)
